<resources>
    <string name="app_name">BangunganKu</string>
    <string name="location">Location</string>
    <string name="icon_location">icon_location</string>
    <string name="title_activity_home2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_report">Report</string>
    <string name="title_service_name">Service name</string>
    <string name="report_id">Laporan #99</string>
    <string name="reporter_name">Nama Pelapor</string>
    <string name="address_title">Alamat</string>
    <string name="report_date">yyyy - mm - dd</string>
    <string name="damage_type">Kerusakan Sedang</string>
    <string name="reporter_title">Pelapor</string>
    <string name="reporter_name_default">Nama Pelapor</string>
    <string name="building_images">Building_Images</string>
    <string name="building_type_text">Jenis Bangunan</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_location">Current Location</string>
    <string name="title_profile">Profile</string>
</resources>